# stowk8s

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
sample/: Chart.yaml
sample/bsi-grafana-mimir/: Chart.yaml
sample/k8s-monitoring/: Chart.yaml  values.yaml
sample/nginx-ingress/: Chart.yaml
src/stowk8s/: __init__.py  cli.py
src/stowk8s/commands/: __init__.py  hello.py  helm.py  image.py
src/stowk8s/strategies/: __init__.py  base.py  helm_bsi.py  helm_template.py  helm_tree.py
src/stowk8s/utils/: __init__.py  file_ops.py  formatter.py  helm_utils.py  image_resolver.py
tests/: test_cli.py  test_formatter.py  test_hello.py  test_helm.py  test_image.py  test_image_resolver.py  test_image_resolver_deep.py  test_image_warning.py  test_oci_reference.py
